--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,19 @@ jobs:
   build:
     working_directory: /dockerapp
     docker:
-      - image: docker:20.10
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
       - setup_remote_docker
       - run:
-          name: Install Docker Compose v2
+          name: Install dependencies
           command: |
-            curl -SL https://github.com/docker/compose/releases/download/v2.30.3/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
+            apk add --no-cache curl
+            curl -L "https://github.com/docker/compose/releases/download/1.15.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             chmod +x /usr/local/bin/docker-compose
-            docker compose version
+            docker-compose --version
       - run:
           name: Run tests
           command: |
-            docker compose up -d
-            docker compose run dockerapp python test.py
+            docker-compose up -d
+            docker-compose run dockerapp python test.py
